[package]
name = "http-req-no-std-win"
author = "klover-rs"
repository = "https://github.com/klover-rs/http_req_no_std_win"
version = "0.1.0"
edition = "2021"
description = "A library which allows you to send simple http requests using the windows api crate, no_std supported!"
license = "MIT"
keywords = ["no_std", "windows", "winapi", "http", "https", "request"]

[dependencies]
winapi = { version = "0.3", features = ["wininet", "errhandlingapi"] }